--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+ html, body {
+   margin: 0;
+   padding: 0;
+ }
+ 
+
+ footer {
+   background-color: rgb(20, 20, 50);
+   color: white;
+   text-align: center;
+   padding: 15px 0;
+   width: 100%;
+   box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);
+   margin-top: auto;
+ }
+
+ footer p {
+   margin: 0;
+   font-size: 0.9rem;
+ }
+ 
